src/pages/Donation/Donation.css
/* ... */
.media-gif-tooltip {
  background-color: rgb(33, 37, 41) !important;
  border-radius: 12px !important;
  border: 1px solid black;
  opacity: 1 !important;
  z-index: 1;
}
.nickname-gif-tooltip {
  background-color: rgb(33, 37, 41) !important;
  opacity: 1 !important;
  border-radius: 12px !important;
  border: 1px solid black;
}
.media-gif {
  border: 2px solid #fff;
}

#nickname-gif-tooltip {
  z-index: 3;
}

.info-urls {
  flex-wrap: wrap;
  justify-content: flex-end;
  padding-right: 18px;
}

.arbitrary-text-container {
  max-width: 400px;
  grid-column: 3;
  grid-row-start: 2;
  grid-row-end: 4;
  margin-left: 50px;
}

.media-item {
  border: 2px solid #dddddd;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  padding-left: 10px;
  padding-right: 10px;
  font-size: 1.2em;
  background-color: #dddddd;
  flex: 0 1 auto;
  justify-content: space-between;
  display: flex;
  width: 100%;
}

.media-item.bordered:hover {
  box-shadow: rgba(0, 0, 0, 0.56) 0px 0px 10px 0px;
}

.bordered {
  border-radius: 8px;
}

.media-item .material-symbols-sharp {
  vertical-align: middle;
}

.media-title {
  overflow: hidden;
  text-wrap: nowrap;
  margin-left: 15px;
  margin-right: 15px;
  font-size: 18px;
  flex: 0 1 auto;
}

.media-item-delete {
  flex: 0 0 auto;
  margin-top: 23px;
  margin-left: 10px;
  color: rgba(226, 126, 126, 1);
}
.media-item-delete:hover {
  cursor: pointer;
}

.media-item-icon {
  font-size: 26px;
}

.media-item-collapse {
  font-size: 30px;
}

.media-item:hover {
  cursor: pointer;
}

.hidden {
  display: none;
}

.donation-target {
  grid-row-start: 1;
  grid-row-end: 4;
  grid-column: 1;
  border-radius: 8px;
  max-width: 400px;
  margin-right: 50px;
  justify-self: end;
  display: flex;
  flex-direction: column;
}

.feedback-container {
  position: fixed;
  bottom: 20px;
  right: 20px;
  z-index: 1000;
  border-radius: 8px;
  box-shadow: rgba(0, 0, 0, 0.56) 0px 0px 10px 0px;
}

.feedback-container .btn {
    background-color: white;
}

.feedback-message-container .btn-text,
.feedback-container .btn-text {
  margin-left: 10px;
}

.feedback-container .btn:hover {
  background-color: white;
  box-shadow: rgba(0, 0, 0, 0.5) 0px 8px 8px -6.4px;
  transform: translateY(-1px);
}

.feedback-message-container {
  position: fixed;
  right: 20px;
  bottom: 80px;
  width: 350px;
  background-color: #f1f1f1;
  padding-bottom: 20px;
  border-radius: 8px;
  padding-right: 20px;
  padding-left: 20px;
  padding-top: 20px;
  z-index: 1000;
  box-shadow: rgba(0, 0, 0, 0.56) 0px 0px 10px 0px;
}

.feedback-message-container .feedback-message {
  width: 100%;
  min-height: 120px;
  margin-bottom: 10px;
  border: 1px solid rgb(222, 226, 230);
  border-radius: 6px;
  resize: none;
  padding-left: 5px;
  padding-right: 5px;
  padding-top: 3px;
  padding-bottom: 3px;
}

.feedback-message:focus {
  color: var(--bs-body-color);
  background-color: var(--bs-body-bg);
  border-color: #86b7fe;
  outline: 0;
  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
}

.feedback-button-group {
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
}

.feedback-button-group .btn {
  width: 100%;
  font-size: 20px;
}

.feedback-button-group .btn:hover {
  box-shadow: rgba(0, 0, 0, 0.5) 0px 8px 8px -6.4px;
  transform: translateY(-1px);
  background-color: rgb(33, 37, 41);
}

.feedback-message-container .material-symbols-sharp,
.feedback-container .material-symbols-sharp {
  vertical-align: middle;
}

@media (min-width: 540px) {
  .page-content-container .card-header {
    padding-bottom: 1.5em;
    padding-top: 1.5em;
  }
}

@media (max-width: 1000px) {
  .arbitrary-text-container {
    max-width: 550px !important;
    margin-right: 0px;
    margin-left: 0px;
    grid-column: 2;
    grid-row: 2;
  }
  #page-card {
    box-shadow: none;
  }
}

@media (max-width: 540px) {
  html,
  body {
    background-image: none !important;
    background-color: rgb(33, 37, 41) !important;
  }

  #recipient-title {
    padding-left: 0px;
    width: 100%;
    margin-bottom: 5px;
  }

  #streamer-logo {
    margin-top: 0px;
  }
  #donation-title {
    margin-top: 0px;
    display: inline-block;
  }

  #min-sum-title {
    color: #747373;
    margin-left: 0px;
    margin-top: 0px;
  }
  #amount-container {
    display: flex;
    flex-wrap: wrap;
    align-items: center;
  }
  #amount-container > div {
    padding-left: 10px;
  }
  .amount-border {
    top: 0px !important;
  }
  #data-panel {
    border-top-right-radius: 0px !important;
    border-top-left-radius: 0px !important;
  }
  .align-items-center.page-content-container {
    align-items: initial !important;
  }
  #page-card {
    width: 100% !important;
    border-right: none !important;
    border-left: none !important;
    margin-left: 0px !important;
    margin-right: 0px !important;
  }
  .arbitrary-text-container {
    grid-column: 2;
    grid-row: 2;
  }
  .page-content-container {
    grid-template-columns: auto;
  }
  .page-content-container .card-header {
    padding-top: 0.5em;
    border-radius: 0 !important;
  }
  .card-footer {
    margin-bottom: 25px;
  }
  .donation-target {
    grid-column: 2;
    grid-row: 3;
    margin-right: 0;
  }
  .feedback-container .btn-text {
    display: none;
  }
  .feedback-container {
    display: none;
  }
}

